--- a/CSS/home.css
+++ b/CSS/home.css
@@ -324,8 +324,18 @@ body {
   transition: all 0.2s ease;
 }
 
+.bottom-nav a img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid rgb(0, 0, 0);
+  object-fit: cover;
+  transition: all 0.2s ease;
+}
+
 
 .bottom-nav a i:hover {
   color: #0095f6;
   transform: scale(1.1);
 }
+
